--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "homepage": "https://ceresrasmussen.github.io/goit-nodejs-hw",
   "private": true,
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
